syntax = "proto3";

option csharp_namespace = "Condominio.GrpcProtos";

package GrpcProtos;

message GetRequest{
	int32 id = 1;
}
